<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_done"
        android:orderInCategory="100"
        android:title="@string/action_save"
        support:showAsAction="always"/>
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="100"
        android:title="@string/action_cancel"
        support:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="101"
        android:title="@string/action_delete"
        support:showAsAction="never"/>

</menu>