<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="500.0dip"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:paddingTop="50.0dip" >

                <TextView
                    style="@style/Title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableTop="@drawable/logo_big"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome" />

                <TextView
                    android:id="@+id/login_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15.0dip"
                    android:paddingLeft="5.0dip"
                    android:paddingTop="15.0dip"
                    android:text="@string/msg_login"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/password"
                    style="@style/EditTextASecure"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/login_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password_repeat"
                    style="@style/EditTextASecure"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/login_pwd_retype"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="Cancel"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/msg_login"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <com.google.ads.AdView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:layout_margin="10.0dip"
                ads:adSize="IAB_MRECT"
                ads:adUnitId="@string/publisher_id"
                ads:loadAdOnCreate="true" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>